Added comment of successfull adding

--- a/popup.html
+++ b/popup.html
@@ -38,7 +38,7 @@
 				<tr>
 					<td> # </td>
 					<td> Paricipant Name </td>
-					<td> Handle on the <a href="http://codeforces.com/"> codeforces </a> </td>
+					<td> Handle on the <a href="https://codeforces.com/"> codeforces </a> </td>
 				</tr>
 				<tr>
 					<td> 1 </td>
