--- a/popup.html
+++ b/popup.html
@@ -30,10 +30,16 @@
 		
 		<div style="width: 100%; margin-top: 7px">
 			<center> <caption> Add Your Team </caption> </center> 
-			<div style="margin-top: 7px">
-				Team name: 
-				<input id="teamName"></input>
-			</div>
+			<table style="margin-top: 7px; width: 100%">
+				<tr>
+					<td style="width: 0; white-space:nowrap">
+						<label> Team name: </label>
+					</td>
+					<td style="width: 100%; white-space:nowrap">
+						<input id="teamName" style="width:100%"></input>
+					</td>
+				</tr>
+			</table>
 			<table id='5' border='2' style='text-align: center; width: 100%; margin-top:7px'>
 				<tr>
 					<td> # </td>
