--- a/popup.html
+++ b/popup.html
@@ -36,7 +36,7 @@
 						<label> Team name: </label>
 					</td>
 					<td style="width: 100%; white-space:nowrap">
-						<input id="teamName" style="width:100%"></input>
+						<input id="teamName" style="width:100%">
 					</td>
 				</tr>
 			</table>
