Improved reloading design

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,9 @@
 	</head>
 	<body style='width: 350px; font-size: 13px' id="body">
 		<a id="lastLoaded">Last update of all users: never</a>
-		<button id="reloadTeams"> <img src="static/reload.png"> </button>
+		<button id="reloadTeams" style="padding: 0; height: 23px;"> 
+			<img src="static/5_s.gif" id="imgReload" style="margin-left: 1px;margin-right: 1px;"> 
+		</button>
 		<br>
 		
 		<caption> Select View: </caption>
